--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ a,#login
     color: #263238;
     text-decoration: none;
     font-weight: bold;
-    padding: 5px 40px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 
