--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*
+{
+    margin: 0px;
+}
 body
 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -6,14 +10,16 @@ body
 /* Comment */
 #logo
 {
-    padding-top: 16px;
+    padding-top: 10px;
     padding-bottom: 0px;
     padding-left: 40px;
     padding-right: 350px;
-    
+    margin-left: 50px;
+    margin-top: 0px;
+    background-color: none;
 }
 
-a,#login
+#login
 {
     margin-top: 0px;
     color: #263238;
@@ -25,6 +31,17 @@ a,#login
     padding-right: 40px;
 }
 
+.ah
+{
+    margin-top: 0px;
+    color: #263238;
+    text-decoration: none;
+    font-weight: bold;
+    padding-top: 7px;
+    padding-bottom: 16px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
 
 .ah:hover
 {
@@ -32,7 +49,7 @@ a,#login
     border-top-width: 0px;
     border-left-width: 0px;
     border-right-width: 0px;
-    border-bottom-width: 3.5px;
+    border-bottom-width: 6px;
     border-style:ridge;
 }
 
